# compatillion

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
compatillion/: json_parser.py  matillion.py
compatillion/matillion/: base.py
